- Fixed errors when print screen has no reports to show (due to access levels).
- Fixed marking repeatable tasks as complete from command drop down.
- Added modifiedby stamp to several command drop down commands.
- Fixed grammar error when dispolay monthly repeat options via javascript.
- Fixed repeat options for "end of month" (e.g. repeat on 31st of every month) scenarios.

phpBMS v0.601/ BMS module v0.601
==================================
- Fixed compatiablity error with older php versions (during update)
- Fixed with quickview not being able to add or edit invoices.
- Fixed invoice search function to use new table schema.
- Updated invoice tax percentages.
- Fixed bu with note views from within a record (associated records)

phpBMS v0.6/ BMS module v0.6
==============================
- New install and update routines.
- Redesigned menu system
- Redesigned entry screens
- Redesigned search screens
- Form validation now consolidated into single warning.
- Alerts and warnings now use DHTML pop up
- New requirements/info page
- Redesigned/Recoded log in screen
- Most screens are almost XHTML compliant
- added logical tabbing to most edit/entry screens.
- Extracted keyboard shortcuts from javascript to accesskey property.
- Consolidated currencty,date formating (in anticpation of multiple formats)
- Fixed bug with related record search reset.
- Fixed application picture upload bug
- Modified client sales history page defaults
- Added help framework
- New phpBMS logo
- Added program feedback on search screens for deleteion and commands
- Added command confirmation to deletion and deletion type actions
- Moved non-delete deletes (voiding, inactivation) to command list
- Recoded change password screen
- Added discounts table, invoice level discouts.
- Added tumbnail, picture, webdescription, and keywords fields to product
- Added product status, inactive and taxable fields.
- Modified product type field
- Added invoice type (formerly status) and status fields